--- a/examples/boilerplate/panorama/index.html
+++ b/examples/boilerplate/panorama/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>360&deg; Image</title>
-    <meta name="description" content="360&deg; Image - A-Frame">
+    <meta name="description" content="PARALOGUE: BANDWAGON">
     <script src="../../../dist/aframe-master.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-sky src="puydesancy.jpg" rotation="0 -130 0"></a-sky>
+      <a-sky src="examples/boilerplate/panorama/Sphere 1 (Large).jpg" rotation="0 -130 0"></a-sky>
 
-      <a-text font="kelsonsans" value="Puy de Sancy, France" width="6" position="-2.5 0.25 -1.5"
+      <a-text font="kelsonsans" value="BANDWAGON" width="6" position="-2.5 0.25 -1.5"
               rotation="0 15 0"></a-text>
     </a-scene>
   </body>
