--- a/examples/boilerplate/panorama/index.html
+++ b/examples/boilerplate/panorama/index.html
@@ -10,8 +10,8 @@
     <a-scene>
       <a-sky src="sphere3.jpg" rotation="0 -130 0"></a-sky>
 
-      <a-text font="kelsonsans" value="BANDWAGON" width="6" position="-2.5 0.25 -1.5"
-              rotation="0 15 0"></a-text>
+      <a-text font="kelsonsans" value="BANDWAGON" width="6" position="-4.41486 5.90366 6.95784" rotation="0 136.86 0" text="width: 14.61; value: END PARALOGUE; color: #000000"></a-text>
+      
     </a-scene>
   </body>
 </html>
