--- a/examples/boilerplate/panorama/index.html
+++ b/examples/boilerplate/panorama/index.html
@@ -11,7 +11,8 @@
       <a-sky src="sphere2.jpg" rotation="0 -130 0"></a-sky>
 
       <a-text font="kelsonsans" value="BANDWAGON" width="6" position="-4.41486 5.90366 6.95784" rotation="0 136.86 0" text="width: 14.61; value: END PARALOGUE; color: #000000"></a-text>
-      
+      <a-image src="examples/boilerplate/panorama/DEADFACE-EMPTY-INV.png" position="-4.41486 5.90366 3.95784" rotation="0 136.86 0"></a-image>
+
     </a-scene>
   </body>
 </html>
