--- a/examples/boilerplate/panorama/index.html
+++ b/examples/boilerplate/panorama/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>360&deg; Image</title>
+    <title>END BANDWAGON</title>
     <meta name="description" content="PARALOGUE: BANDWAGON">
     <script src="../../../dist/aframe-master.js"></script>
   </head>
